--- a/components/genericComponents/Hero/Hero.module.scss
+++ b/components/genericComponents/Hero/Hero.module.scss
@@ -3,7 +3,7 @@
 
 
 .hero {
-  background-color: $color-blue-very-light;
+  background-color: $color-green-very-light;
   
   &--transparent {
     @extend .hero;
@@ -17,7 +17,7 @@
 
   &--blue {
     @extend .hero;
-    background-color: $color-blue-very-light;
+    background-color: $color-green-very-light;
   }
 
   &--red {
