add activities file

--- a/components/specificComponents/activities/activities.module.scss
+++ b/components/specificComponents/activities/activities.module.scss
@@ -1,4 +1,4 @@
-﻿@import "../../../styles/font-mixins.scss";
+@import "../../../styles/font-mixins.scss";
 @import "../../../styles/colors.scss";
 
 
