--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,14 +1,14 @@
 ﻿/*General colors*/
-$color-grey-very-light: #e1e4ea;
-$color-grey-super-light: #f4f6fc;
+$color-grey-very-light: #e4baba;
+$color-grey-super-light: #9b4141;
 $color-grey-super-ultra-light: #f9fbff;
 $color-grey-light: #9ea8bb;
-$color-grey-normal: #001c54;
+$color-grey-normal: #801111;
 $color-blue-ultra-light: #f5f8fd;
 $color-blue-very-light: #eaf0fd;
 $color-blue-light: #d2e0ff;
 $color-blue-mid: #ccd7f1;
-$color-blue-normal: #1b6bf8;
+$color-blue-normal: #6e0101;
 $color-red-very-light: #ffe8e8;
 $color-red-light: #ffb5b5;
 $color-red-normal: #ff6868;
