changed some more colours

--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -16,11 +16,11 @@ $color-yellow-very-light: #fffae6;
 $color-yellow-light: #ffefad;
 $color-yellow-normal: #ffcf11;
 $color-green-very-light: #e8f9f7;
-$color-green-light: #b5ece5;
-$color-green-normal: #33dfc8;
+$color-green-light: #442020;
+$color-green-normal: #f14b4b;
 $color-purple-very-light: #efecff;
-$color-purple-light: #ccc2ff;
-$color-purple-normal: #705bfe;
+$color-purple-light: #ffc2c2;
+$color-purple-normal: #631a1a;
 $color-white-very-light: #ffffff;
 $color-white-light: #f3f3f3;
 $color-white-normal: #e4e4e4;
