--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -8,7 +8,7 @@ $color-blue-ultra-light: #f5f8fd;
 $color-blue-very-light: #eaf0fd;
 $color-blue-light: #d2e0ff;
 $color-blue-mid: #ccd7f1;
-$color-blue-normal: #6e0101;
+$color-blue-normal: #ff0000;
 $color-red-very-light: #ffe8e8;
 $color-red-light: #ffb5b5;
 $color-red-normal: #ff6868;
