--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -17,7 +17,7 @@ $color-yellow-light: #ffefad;
 $color-yellow-normal: #ffcf11;
 $color-green-very-light: #e8f9f7;
 $color-green-light: #442020;
-$color-green-normal: #f14b4b;
+$color-green-normal: #e64444;
 $color-purple-very-light: #efecff;
 $color-purple-light: #ffc2c2;
 $color-purple-normal: #631a1a;
