--- a/styles/animations.scss
+++ b/styles/animations.scss
@@ -35,3 +35,15 @@
     transform: translate3d(0, 0, 0);
   }
 }
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 1s ease-in-out;
+}
