--- a/components/genericComponents/Element/Element.module.scss
+++ b/components/genericComponents/Element/Element.module.scss
@@ -5,7 +5,7 @@
   margin: 40px 0;
   cursor: pointer;
   background-color: $color-grey-light; 
-  border: 1px solid $color-grey-border; 
+  border: 1px solid $color-grey-light; 
   border-radius: 8px;
   padding: 20px; 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
